ran 1 map for threshold 20-50

--- a/2_Maps.ipynb
+++ b/2_Maps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,128 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulating maps for iteration  0\n",
-      "Simulating maps for iteration  1\n",
-      "Simulating maps for iteration  2\n",
-      "Simulating maps for iteration  3\n",
-      "Simulating maps for iteration  4\n",
-      "Simulating maps for iteration  5\n",
-      "Simulating maps for iteration  6\n",
-      "Simulating maps for iteration  7\n",
-      "Simulating maps for iteration  8\n",
-      "Simulating maps for iteration  9\n",
-      "Simulating maps for iteration  10\n",
-      "Simulating maps for iteration  11\n",
-      "Simulating maps for iteration  12\n",
-      "Simulating maps for iteration  13\n",
-      "Simulating maps for iteration  14\n",
-      "Simulating maps for iteration  15\n",
-      "Simulating maps for iteration  16\n",
-      "Simulating maps for iteration  17\n",
-      "Simulating maps for iteration  18\n",
-      "Simulating maps for iteration  19\n",
-      "Simulating maps for iteration  20\n",
-      "Simulating maps for iteration  21\n",
-      "Simulating maps for iteration  22\n",
-      "Simulating maps for iteration  23\n",
-      "Simulating maps for iteration  24\n",
-      "Simulating maps for iteration  25\n",
-      "Simulating maps for iteration  26\n",
-      "Simulating maps for iteration  27\n",
-      "Simulating maps for iteration  28\n",
-      "Simulating maps for iteration  29\n",
-      "Simulating maps for iteration  30\n",
-      "Simulating maps for iteration  31\n",
-      "Simulating maps for iteration  32\n",
-      "Simulating maps for iteration  33\n",
-      "Simulating maps for iteration  34\n",
-      "Simulating maps for iteration  35\n",
-      "Simulating maps for iteration  36\n",
-      "Simulating maps for iteration  37\n",
-      "Simulating maps for iteration  38\n",
-      "Simulating maps for iteration  39\n",
-      "Simulating maps for iteration  40\n",
-      "Simulating maps for iteration  41\n",
-      "Simulating maps for iteration  42\n",
-      "Simulating maps for iteration  43\n",
-      "Simulating maps for iteration  44\n",
-      "Simulating maps for iteration  45\n",
-      "Simulating maps for iteration  46\n",
-      "Simulating maps for iteration  47\n",
-      "Simulating maps for iteration  48\n",
-      "Simulating maps for iteration  49\n",
-      "Simulating maps for iteration  50\n",
-      "Simulating maps for iteration  51\n",
-      "Simulating maps for iteration  52\n",
-      "Simulating maps for iteration  53\n",
-      "Simulating maps for iteration  54\n",
-      "Simulating maps for iteration  55\n",
-      "Simulating maps for iteration  56\n",
-      "Simulating maps for iteration  57\n",
-      "Simulating maps for iteration  58\n",
-      "Simulating maps for iteration  59\n",
-      "Simulating maps for iteration  60\n",
-      "Simulating maps for iteration  61\n",
-      "Simulating maps for iteration  62\n",
-      "Simulating maps for iteration  63\n",
-      "Simulating maps for iteration  64\n",
-      "Simulating maps for iteration  65\n",
-      "Simulating maps for iteration  66\n",
-      "Simulating maps for iteration  67\n",
-      "Simulating maps for iteration  68\n",
-      "Simulating maps for iteration  69\n",
-      "Simulating maps for iteration  70\n",
-      "Simulating maps for iteration  71\n",
-      "Simulating maps for iteration  72\n",
-      "Simulating maps for iteration  73\n",
-      "Simulating maps for iteration  74\n",
-      "Simulating maps for iteration  75\n",
-      "Simulating maps for iteration  76\n",
-      "Simulating maps for iteration  77\n",
-      "Simulating maps for iteration  78\n",
-      "Simulating maps for iteration  79\n",
-      "Simulating maps for iteration  80\n",
-      "Simulating maps for iteration  81\n",
-      "Simulating maps for iteration  82\n",
-      "Simulating maps for iteration  83\n",
-      "Simulating maps for iteration  84\n",
-      "Simulating maps for iteration  85\n",
-      "Simulating maps for iteration  86\n",
-      "Simulating maps for iteration  87\n",
-      "Simulating maps for iteration  88\n",
-      "Simulating maps for iteration  89\n",
-      "Simulating maps for iteration  90\n",
-      "Simulating maps for iteration  91\n",
-      "Simulating maps for iteration  92\n",
-      "Simulating maps for iteration  93\n",
-      "Simulating maps for iteration  94\n",
-      "Simulating maps for iteration  95\n",
-      "Simulating maps for iteration  96\n",
-      "Simulating maps for iteration  97\n",
-      "Simulating maps for iteration  98\n",
-      "Simulating maps for iteration  99\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "CPU times: user 18min 57s, sys: 24.5 s, total: 19min 21s\n",
-      "Wall time: 28min 12s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# build maps\n",
     "%time c_map_fixed,l_map_fixed,c_map,l_map,S_8 = threshold_sim(itr=100,nside=256,smoothing=20,b=10)"
@@ -212,136 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing functionals for iteration 0\n",
-      "Computing functionals for iteration 1\n",
-      "Computing functionals for iteration 2\n",
-      "Computing functionals for iteration 3\n",
-      "Computing functionals for iteration 4\n",
-      "Computing functionals for iteration 5\n",
-      "Computing functionals for iteration 6\n",
-      "Computing functionals for iteration 7\n",
-      "Computing functionals for iteration 8\n",
-      "Computing functionals for iteration 9\n",
-      "Computing functionals for iteration 10\n",
-      "Computing functionals for iteration 11\n",
-      "Computing functionals for iteration 12\n",
-      "Computing functionals for iteration 13\n",
-      "Computing functionals for iteration 14\n",
-      "Computing functionals for iteration 15\n",
-      "Computing functionals for iteration 16\n",
-      "Computing functionals for iteration 17\n",
-      "Computing functionals for iteration 18\n",
-      "Computing functionals for iteration 19\n",
-      "Computing functionals for iteration 20\n",
-      "Computing functionals for iteration 21\n",
-      "Computing functionals for iteration 22\n",
-      "Computing functionals for iteration 23\n",
-      "Computing functionals for iteration 24\n",
-      "Computing functionals for iteration 25\n",
-      "Computing functionals for iteration 26\n",
-      "Computing functionals for iteration 27\n",
-      "Computing functionals for iteration 28\n",
-      "Computing functionals for iteration 29\n",
-      "Computing functionals for iteration 30\n",
-      "Computing functionals for iteration 31\n",
-      "Computing functionals for iteration 32\n",
-      "Computing functionals for iteration 33\n",
-      "Computing functionals for iteration 34\n",
-      "Computing functionals for iteration 35\n",
-      "Computing functionals for iteration 36\n",
-      "Computing functionals for iteration 37\n",
-      "Computing functionals for iteration 38\n",
-      "Computing functionals for iteration 39\n",
-      "Computing functionals for iteration 40\n",
-      "Computing functionals for iteration 41\n",
-      "Computing functionals for iteration 42\n",
-      "Computing functionals for iteration 43\n",
-      "Computing functionals for iteration 44\n",
-      "Computing functionals for iteration 45\n",
-      "Computing functionals for iteration 46\n",
-      "Computing functionals for iteration 47\n",
-      "Computing functionals for iteration 48\n",
-      "Computing functionals for iteration 49\n",
-      "Computing functionals for iteration 50\n",
-      "Computing functionals for iteration 51\n",
-      "Computing functionals for iteration 52\n",
-      "Computing functionals for iteration 53\n",
-      "Computing functionals for iteration 54\n",
-      "Computing functionals for iteration 55\n",
-      "Computing functionals for iteration 56\n",
-      "Computing functionals for iteration 57\n",
-      "Computing functionals for iteration 58\n",
-      "Computing functionals for iteration 59\n",
-      "Computing functionals for iteration 60\n",
-      "Computing functionals for iteration 61\n",
-      "Computing functionals for iteration 62\n",
-      "Computing functionals for iteration 63\n",
-      "Computing functionals for iteration 64\n",
-      "Computing functionals for iteration 65\n",
-      "Computing functionals for iteration 66\n",
-      "Computing functionals for iteration 67\n",
-      "Computing functionals for iteration 68\n",
-      "Computing functionals for iteration 69\n",
-      "Computing functionals for iteration 70\n",
-      "Computing functionals for iteration 71\n",
-      "Computing functionals for iteration 72\n",
-      "Computing functionals for iteration 73\n",
-      "Computing functionals for iteration 74\n",
-      "Computing functionals for iteration 75\n",
-      "Computing functionals for iteration 76\n",
-      "Computing functionals for iteration 77\n",
-      "Computing functionals for iteration 78\n",
-      "Computing functionals for iteration 79\n",
-      "Computing functionals for iteration 80\n",
-      "Computing functionals for iteration 81\n",
-      "Computing functionals for iteration 82\n",
-      "Computing functionals for iteration 83\n",
-      "Computing functionals for iteration 84\n",
-      "Computing functionals for iteration 85\n",
-      "Computing functionals for iteration 86\n",
-      "Computing functionals for iteration 87\n",
-      "Computing functionals for iteration 88\n",
-      "Computing functionals for iteration 89\n",
-      "Computing functionals for iteration 90\n",
-      "Computing functionals for iteration 91\n",
-      "Computing functionals for iteration 92\n",
-      "Computing functionals for iteration 93\n",
-      "Computing functionals for iteration 94\n",
-      "Computing functionals for iteration 95\n",
-      "Computing functionals for iteration 96\n",
-      "Computing functionals for iteration 97\n",
-      "Computing functionals for iteration 98\n",
-      "Computing functionals for iteration 99\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "CPU times: user 34min 13s, sys: 11.3 s, total: 34min 24s\n",
-      "Wall time: 22min 49s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/root/mink/threshold.py:93: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  constraining_power = np.sqrt(-1 / (2*coefficient[0]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time threshold_mf(c_map_fixed,l_map_fixed,c_map,l_map,S_8,thr_ct=18,itr=100,nside=256,smoothing=20)  "
    ]
@@ -411,6 +165,29 @@
     "# 300 data points, 150 realisations\n",
     "%time threshold_mf(c_map_fixed,l_map_fixed,c_map,l_map,S_8,thr_ct=50,itr=100,nside=256,smoothing=20) #160"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### do in one go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time threshold_all(itr=120,thr_ct=18,map_len=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1432,6 +1209,157 @@
     "    ax3.set_ylabel('$V_2$')\n",
     "    # not sure how to label redshift bins here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# threshold one map\n",
+    "\n",
+    "def thresh(itr,thr_ct,nside,smoothing,array_len,b):\n",
+    "    \n",
+    "    N = 12*nside*nside\n",
+    "    \n",
+    "    # fixed map iterations\n",
+    "    v_all_fixed = np.zeros((itr,array_len))\n",
+    "    for i in range(itr):\n",
+    "        c_map, l_map = simulate_des_maps(0.3, 0.8, smoothing, nside, nmax=1)\n",
+    "        v,v0,v1,v2 = calc_mf(l_map[0], thr_ct, N, is_clustering=False)\n",
+    "        v_all_fixed[i] = np.concatenate((v0,v1,v2))\n",
+    "        \n",
+    "    # fixed map mean    \n",
+    "    v_all_mean = np.zeros(array_len)\n",
+    "    for i in range(array_len):\n",
+    "            v_all_mean[i] = np.mean(v_all_fixed[:,i])\n",
+    "            \n",
+    "    # calculate S_8  \n",
+    "    omega_m = np.linspace(0.2,0.4,b)\n",
+    "    sigma_8 = 0.8989639361571576*omega_m + 0.5303108191528527\n",
+    "    S_8 = sigma_8 * (omega_m/0.3)**0.5329788249790618 \n",
+    "    \n",
+    "    # applying 10 S_8 values\n",
+    "    v_all = np.zeros((b,array_len))\n",
+    "    for i in range(b):\n",
+    "        c_map, l_map = simulate_des_maps(omega_m[i], sigma_8[i], smoothing, nside, nmax=1)\n",
+    "        v,v0,v1,v2 = calc_mf(l_map[0], thr_ct, N, is_clustering=False)\n",
+    "        v_all[i] = np.concatenate((v0,v1,v2))  \n",
+    "\n",
+    "    # covariance\n",
+    "    cov = np.cov((v_all_fixed.transpose()))\n",
+    "    \n",
+    "    # singular covariance matrix workaround\n",
+    "    good = cov.diagonal() > 0\n",
+    "    cov2 = cov[good][:, good]\n",
+    "\n",
+    "    # calculate the likelihood          \n",
+    "    L = np.zeros(b)\n",
+    "    N_ = itr-1           # number of realisations - 1\n",
+    "    p = array_len        # number of data points\n",
+    "\n",
+    "    try:\n",
+    "        inv_cov = ((N_)/(N_ - p - 1)) * np.linalg.inv(cov)\n",
+    "        for i in range(b):\n",
+    "            L[i] = -0.5 * (v_all[i] - v_all_mean) @ inv_cov @ (v_all[i] - v_all_mean)\n",
+    "    except:\n",
+    "        inv_cov2 = ((N_)/(N_ - p - 1)) * np.linalg.inv(cov2)\n",
+    "        for i in range(b):\n",
+    "            d = (v_all[i] - v_all_mean)[good]\n",
+    "            L[i] = -0.5 * d @ inv_cov2 @ d\n",
+    "            \n",
+    "    \n",
+    "    coefficient = np.polyfit(S_8,L,2)\n",
+    "    constraining_power = np.sqrt(-1 / (2*coefficient[0]))\n",
+    "    \n",
+    "    # output array\n",
+    "    c = np.array((thr_ct,smoothing,nside,constraining_power))\n",
+    "\n",
+    "\n",
+    "    ## save data ##\n",
+    "\n",
+    "    # parent directory\n",
+    "    output_path = os.path.join(os.getcwd(), '1_Map_Output')\n",
+    "\n",
+    "    # save data in new subfolder\n",
+    "    sub_path = os.path.join(output_path, f't{thr_ct}_n{nside}_s{smoothing}')\n",
+    "    \n",
+    "\n",
+    "    try:\n",
+    "        os.mkdir(sub_path) \n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "    np.savetxt(os.path.join(sub_path, 'c.out'),c)\n",
+    "    np.savetxt(os.path.join(sub_path, 'V_all_fixed.out'),v_all_fixed)\n",
+    "    np.savetxt(os.path.join(sub_path, 'v_all_changing'),v_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thr_ct=30\n",
+    "itr=100\n",
+    "nside=256\n",
+    "smoothing=20\n",
+    "map_len=1\n",
+    "array_len = map_len * thr_ct * 3 \n",
+    "\n",
+    "thresh(itr,thr_ct,nside,smoothing,array_len,b=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thr_ct=40\n",
+    "array_len = map_len * thr_ct * 3 \n",
+    "thresh(itr,thr_ct,nside,smoothing,array_len,b=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thr_ct=50\n",
+    "array_len = map_len * thr_ct * 3 \n",
+    "thresh(itr,thr_ct,nside,smoothing,array_len,b=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
