ran for one map

--- a/Sky_Fraction.ipynb
+++ b/Sky_Fraction.ipynb
@@ -619,10 +619,10 @@
     "    v2 = np.zeros((map_len,thr_ct))\n",
     "\n",
     "    for i,m in enumerate(clustering_maps):\n",
-    "        v[i], v0[i], v1[i], v2[i] = calc_mf(m, thr_ct, N, is_clustering=True)\n",
+    "        v[i], v0[i], v1[i], v2[i] = calc_mf_f(m, thr_ct, N, is_clustering=True)\n",
     "\n",
     "    for j,m in enumerate(lensing_maps):\n",
-    "        v[j+i+1], v0[j+i+1], v1[j+i+1], v2[j+i+1] = calc_mf(m, thr_ct, N, is_clustering=False)   \n",
+    "        v[j+i+1], v0[j+i+1], v1[j+i+1], v2[j+i+1] = calc_mf_f(m, thr_ct, N, is_clustering=False)   \n",
     "\n",
     "    return v,v0,v1,v2 "
    ]
