--- a/NaMaster.ipynb
+++ b/NaMaster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
     "smoothing=20                                  # map scale\n",
     "N = 12*nside*nside                            # total number of pixels\n",
     "aposize = 1                                   # size of masks (in degrees)\n",
-    "b = nmt.NmtBin.from_nside_linear(nside, 4)    # apply binning with 4 ells per bandpower\n",
+    "b = nmt.NmtBin.from_nside_linear(nside, 50)    # apply binning with 50 ells per bandpower\n",
     "\n",
     "## Analysis Variables\n",
     "itr = 2                                    # number of iterations\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
     "    for i in range(len(c_map)):\n",
     "        Cl[i] = C_l(c_map[i])#,smoothing,nside,aposize)  # clustering map\n",
     "    for j in range(len(l_map)):\n",
-    "        Cl[i+j] = C_l(l_map[j])#,smoothing,nside,aposize)  # lensing map\n",
+    "        Cl[i+j+1] = C_l(l_map[j])#,smoothing,nside,aposize)  # lensing map\n",
     "    return Cl"
    ]
   },
